--- a/index.html
+++ b/index.html
@@ -1160,7 +1160,154 @@
             Explanation store
           </div>
           <div class="explanation" id="explanation_battle_spiral" style="display: none">
-            Explanation battle spiral
+            The Battle Spiral is unlocked upon reaching the second $\omega$ tier for the first time. This is currently by far the most important part of the game.
+
+            There are currently 8 tiers of enemies
+
+            Training:
+            10 rewards
+            <table>
+              <tr>                        <th>Reward                            </th><th>Weight</th></tr>
+              <tr class="reward-uncommon"><td>$a + 0.001$                       </td><td>  $11$</td></tr>
+              <tr class="reward-rare">    <td>$b + 0.001$                       </td><td>   $1$</td></tr>
+              <tr class="reward-rare">    <td>$c + 0.001$                       </td><td>   $1$</td></tr>
+              <tr class="reward-rare">    <td>$d + 0.001$                       </td><td>   $1$</td></tr>
+              <tr class="reward-rare">    <td>$e + 0.001$                       </td><td>   $1$</td></tr>
+              <tr class="reward-common">  <td>$\text{ATK} + [1,2]$              </td><td> $400$</td></tr>
+              <tr class="reward-common">  <td>$k + [1,9]$                       </td><td>  $50$</td></tr>
+              <tr class="reward-common">  <td>$\text{HP} + [1,9]$               </td><td>$3000$</td></tr>
+              <tr class="reward-rare">    <td>$\text{Exp} + 1$                  </td><td>   $1$</td></tr>
+              <tr class="reward-rare">    <td>$\text{Regen} + 1$                </td><td>  $10$</td></tr>
+              <tr class="reward-onetime"> <td>$\text{Thales}\ /\ \text{Exp} + 1$</td><td>      </td></tr>
+              <tr>                        <td>                                  </td><td>$3476$</td></tr>
+            </table>
+
+            Kappa:
+            10 rewards
+            <table>
+              <tr>                        <th>Reward                             </th><th>Weight</th></tr>
+              <tr class="reward-uncommon"><td>$a + 0.01$                         </td><td>  $10$</td></tr>
+              <tr class="reward-rare">    <td>$b + 0.001$                        </td><td>   $5$</td></tr>
+              <tr class="reward-rare">    <td>$c + 0.001$                        </td><td>   $5$</td></tr>
+              <tr class="reward-rare">    <td>$d + 0.001$                        </td><td>   $5$</td></tr>
+              <tr class="reward-rare">    <td>$e + 0.001$                        </td><td>   $5$</td></tr>
+              <tr class="reward-common">  <td>$k + [1,2]$                        </td><td>$1000$</td></tr>
+              <tr class="reward-rare">    <td>$k\% + 1\%*[1,2]$                  </td><td>   $1$</td></tr>
+              <tr class="reward-uncommon"><td>$\text{ATK} + [1,9]$               </td><td>  $10$</td></tr>
+              <tr class="reward-uncommon"><td>$\text{DEF} + [1,9]$               </td><td>  $30$</td></tr>
+              <tr class="reward-rare">    <td>$\text{Exp} + [1,2]$               </td><td>   $3$</td></tr>
+              <tr class="reward-onetime"> <td>$\text{Hypatia}\ /\ \text{Exp} + 2$</td><td>      </td></tr>
+              <tr>                        <td>                                   </td><td>$1074$</td></tr>
+            </table>
+
+            Alpha:
+            15 rewards
+            <table>
+              <tr>                        <th>Reward                                 </th><th>Weight</th></tr>
+              <tr class="reward-rare">    <td>$\text{ATK} + 100$                     </td><td>   $1$</td></tr>
+              <tr class="reward-rare">    <td>$a + 1$                                </td><td>   $1$</td></tr>
+              <tr class="reward-common">  <td>$\text{ATK} + 2*[1,4]$                 </td><td> $100$</td></tr>
+              <tr class="reward-common">  <td>$\text{HP} + 5*[1,4]$                  </td><td>$1000$</td></tr>
+              <tr class="reward-common">  <td>$a + 0.1*[1,9]$                        </td><td>$1000$</td></tr>
+              <tr class="reward-uncommon"><td>$a\% + 0.1\%*[1,19]$                   </td><td>  $50$</td></tr>
+              <tr class="reward-rare">    <td>$\text{HP}\% + 1\%*[1,9]$              </td><td>   $5$</td></tr>
+              <tr class="reward-rare">    <td>$\text{ATK}\% + 1\%*[1,9]$             </td><td>   $5$</td></tr>
+              <tr class="reward-rare">    <td>$\text{Exp} + [1,9]$                   </td><td>   $5$</td></tr>
+              <tr class="reward-uncommon"><td>$\text{ATK} + 3*[4,8]$                 </td><td>  $30$</td></tr>
+              <tr class="reward-onetime"> <td>$\text{Archimedes}\ /\ \text{Exp} + 10$</td><td>      </td></tr>
+              <tr>                        <td>                                       </td><td>$2197$</td></tr>
+            </table>
+
+            Beta:
+            20 rewards
+            <table>
+              <tr>                        <th>Reward                                 </th><th> Weight</th></tr>
+              <tr class="reward-rare">    <td>$a + 0.1*[1,10]$                       </td><td>    $5$</td></tr>
+              <tr class="reward-rare">    <td>$c + 0.01*[1,4]$                       </td><td>    $1$</td></tr>
+              <tr class="reward-rare">    <td>$d + 0.01*[1,4]$                       </td><td>    $1$</td></tr>
+              <tr class="reward-rare">    <td>$e + 0.01*[1,4]$                       </td><td>    $1$</td></tr>
+              <tr class="reward-uncommon"><td>$\text{DEF} + 50*[1,4]$                </td><td>   $50$</td></tr>
+              <tr class="reward-rare">    <td>$b + 0.2*[1,4]$                        </td><td>    $5$</td></tr>
+              <tr class="reward-common">  <td>$k + 10*[1,4]$                         </td><td> $1000$</td></tr>
+              <tr class="reward-common">  <td>$\text{DEF} + 5*[1,4]$                 </td><td> $2000$</td></tr>
+              <tr class="reward-common">  <td>$\text{HP} + 20*[1,4]$                 </td><td>$10000$</td></tr>
+              <tr class="reward-common">  <td>$b + 0.01*[1,19]$                      </td><td> $2000$</td></tr>
+              <tr class="reward-uncommon"><td>$\text{DEF}\% + 1\%*[1,4]$             </td><td>   $50$</td></tr>
+              <tr class="reward-uncommon"><td>$\text{HP}\% + 1\%*[1,4]$              </td><td>   $50$</td></tr>
+              <tr class="reward-rare">    <td>$b\% + 1\%*[1,19]$                     </td><td>    $5$</td></tr>
+              <tr class="reward-uncommon"><td>$\text{ATK} + 100*[1,4]$               </td><td>   $50$</td></tr>
+              <tr class="reward-common">  <td>$\text{ATK} + 20*[1,4]$                </td><td> $1000$</td></tr>
+              <tr class="reward-uncommon"><td>$\text{Exp} + [1,29]$                  </td><td>   $30$</td></tr>
+              <tr class="reward-onetime"> <td>$\text{Pythagoras}\ /\ \text{Exp} + 30$</td><td>       </td></tr>
+              <tr>                        <td>                                       </td><td>$16248$</td></tr>
+            </table>
+
+
+            Pi:
+            10 rewards
+            <table>
+              <tr>                       <th>Reward                                               </th><th> Weight</th></tr>
+              <tr class="reward-common"> <td>$c + 0.1*[1,9]$                                      </td><td>$10000$</td></tr>
+              <tr class="reward-common"> <td>$c\% + 0.1\%*[1,4]$                                  </td><td>$10000$</td></tr>
+              <tr class="reward-common"> <td>$\text{HP} + 1000*[1,9]$                             </td><td>$10000$</td></tr>
+              <tr class="reward-common"> <td>$\text{DEF} + 500*[1,9 + \text{atk_and_def_from_pi}]$</td><td>$10000$</td></tr>
+              <tr class="reward-common"> <td>$\text{ATK} + 500*[1,9 + \text{atk_and_def_from_pi}]$</td><td>$10000$</td></tr>
+              <tr class="reward-common"> <td>$\text{HP}\% + 1\%*[1,4]$                            </td><td>$10000$</td></tr>
+              <tr class="reward-common"> <td>$\text{DEF}\% + 1\%*[1,4]$                           </td><td>$10000$</td></tr>
+              <tr class="reward-common"> <td>$\text{ATK}\% + 1\%*[1,4]$                           </td><td>$10000$</td></tr>
+              <tr class="reward-onetime"><td>$\text{Euclides}\ /\ \text{Exp} + 100$               </td><td>       </td></tr>
+              <tr>                       <td>                                                     </td><td>$80000$</td></tr>
+            </table>
+
+            Gamma:
+            10 rewards
+            <table>
+              <tr>                        <th>Reward                                       </th><th>Weight</th></tr>
+              <tr class="reward-rare">    <td>$\gamma\% + 0.1\%*[1,2]$                     </td><td>   $1$</td></tr>
+              <tr class="reward-rare">    <td>$\delta\% + 0.1\%*[1,2]$                     </td><td>   $1$</td></tr>
+              <tr class="reward-rare">    <td>$\Omega\% + 0.1\%*[1,2]$                     </td><td>   $1$</td></tr>
+              <tr class="reward-common">  <td>$\gamma + 0.1*[1,9]$                         </td><td>$3000$</td></tr>
+              <tr class="reward-common">  <td>$\delta + 0.1*[1,9]$                         </td><td>$3000$</td></tr>
+              <tr class="reward-common">  <td>$\Omega + 0.1*[1,9]$                         </td><td>$3000$</td></tr>
+              <tr class="reward-rare">    <td>$\text{Attack Speed} + 0.25\%$               </td><td>  $10$</td></tr>
+              <tr class="reward-common">  <td>$d + 0.1*[1,9]$                              </td><td>$1000$</td></tr>
+              <tr class="reward-common">  <td>$d\% + 0.1\%*[1,4]$                          </td><td>$1000$</td></tr>
+              <tr class="reward-uncommon"><td>$\text{Exp} + [1,49+5*\text{exp_from_gamma}]$</td><td>  $20$</td></tr>
+              <tr class="reward-onetime"> <td>$\text{Eratos}\ /\ \text{Exp} + 50$          </td><td>       </td></tr>
+              <tr>                        <td>                                             </td><td>$11033$</td></tr>
+            </table>
+
+            Napier:
+            15 rewards
+            <table>
+              <tr>                        <th>Reward                                                          </th><th> Weight</th></tr>
+              <tr class="reward-common">  <td>$\text{Crit Damage} + 0.1\%*[1,49]$                             </td><td> $1000$</td></tr>
+              <tr class="reward-uncommon"><td>$\text{Crit Damage} + 3\%$                                      </td><td>   $10$</td></tr>
+              <tr class="reward-rare">    <td>$\text{S-Crit Damage} + 1\%*[1,3+\text{s_critical_from_napier}]$</td><td>   $10$</td></tr>
+              <tr class="reward-common">  <td>$e + 0.1*[5,49]$                                                </td><td> $1000$</td></tr>
+              <tr class="reward-common">  <td>$e + 0.1*[3,19]$                                                </td><td> $1000$</td></tr>
+              <tr class="reward-common">  <td>$e% + 0.1\%*[1,4]$                                              </td><td> $1000$</td></tr>
+              <tr class="reward-common">  <td>$\text{HP} + 10000*[1,9]$                                       </td><td>$10000$</td></tr>
+              <tr class="reward-common">  <td>$\text{DEF} + 5000*[1,9]$                                       </td><td>$10000$</td></tr>
+              <tr class="reward-common">  <td>$\text{ATK} + 5000*[1,9]$                                       </td><td>$10000$</td></tr>
+              <tr class="reward-onetime"> <td>$\text{Aryabhata}\ /\ \text{Exp} + 100$                         </td><td>       </td></tr>
+              <tr>                        <td>                                                                </td><td>$34020$</td></tr>
+            </table>
+
+            Pentangle:
+            5 rewards
+            <table>
+              <tr>                        <th>Reward                                   </th><th>Weight</th></tr>
+              <tr class="reward-common">  <td>$\text{S-Crit Damage} + 10\%*[1,9]$      </td><td>$1000$</td></tr>
+              <tr class="reward-common">  <td>$\text{Crit Damage} + 2\%*[1,9]$         </td><td>$1000$</td></tr>
+              <tr class="reward-uncommon"><td>$\text{S-Crit Damage} + 100\%*[10,29]$   </td><td>  $50$</td></tr>
+              <tr class="reward-uncommon"><td>$\text{Crit Damage} + 20\%*[10,29]$      </td><td>  $50$</td></tr>
+              <tr class="reward-rare">    <td>$\text{Rare Chance} + 0.01\%*[1,9]$      </td><td>  $20$</td></tr>
+              <tr class="reward-common">  <td>$\text{Math Skill} + 1$                  </td><td>$1000$</td></tr>
+              <tr class="reward-rare">    <td>$\text{Math Skill} + [10,29]$            </td><td>  $10$</td></tr>
+              <tr class="reward-onetime"> <td>$\text{Brahmagupta}\ /\ \text{Exp} + 100$</td><td>      </td></tr>
+              <tr>                        <td>                                         </td><td>$3130$</td></tr>
+            </table>
           </div>
           <div class="explanation" id="explanation_spiral_equations" style="display: none">
             Explanation spiral equations
