--- a/index.html
+++ b/index.html
@@ -1479,7 +1479,6 @@
               Besides these bonuses; you also unlock new features when you reach certain levels;
             </p>
 
-            <!-- table -->
             <table>
               <thead>
                 <tr>
@@ -1709,7 +1708,74 @@
             </table>
           </div>
           <div class="explanation" id="explanation_spiral_equations" style="display: none">
-            Explanation spiral equations
+            Spiral Equations are unlocked at tornado tier 4. Upon unlocking, all enemies will display a onetime reward as their last reward, taking the place of the standard exp reward. You can select up to two equations at the start to level. You gain the ability to select an additional equation from the 'kanji' spiral design passive.<br>
+            <br>
+            While an equation is selected, it will build up exp based on your spiral equation speed. Once the exp has crossed the 'cost' of the next level, the equation will level up.
+            
+            <h3>I: Thales</h3>
+            <b>Unlock:</b> Training<br>
+            <b>Cost:</b> $10 * 1.03^{\text{level}}$<br>
+            <b>Reward:</b> $\text{HP} \mathrel{{*}{=}} 1 + 1\% * \text{level} + 0.1\% * [\text{level}-1000]$
+
+            <h3>II: Hypatia</h3>
+            <b>Unlock:</b> Kappa<br>
+            <b>Cost:</b> $30 * 1.03^{\text{level}}$<br>
+            <b>Reward:</b> $\text{DEF} \mathrel{{*}{=}} 1 + 1\% * \text{level} + 0.1\% * [\text{level}-1000]$
+
+            <h3>III: Archimedes</h3>
+            <b>Unlock:</b> Alpha<br>
+            <b>Cost:</b> $60 * 1.03^{\text{level}}$<br>
+            <b>Reward:</b> $\text{ATK} \mathrel{{*}{=}} 1 + 1\% * \text{level} + 0.1\% * [\text{level}-1000]$
+
+            <h3>IV: Pythagoras</h3>
+            <b>Unlock:</b> Beta<br>
+            <b>Cost:</b> $120 * 1.03^{\text{level}}$<br>
+            <b>Reward:</b> $\text{Critical Damage} \mathrel{{*}{=}} 1 + 1\% * \text{level} + 0.1\% * [\text{level}-1000]$
+
+            <h3>V: Euclides</h3>
+            <b>Unlock:</b> Pi<br>
+            <b>Cost:</b> $150 * 1.03^{\text{level}}$<br>
+            <b>Reward:</b> $\text{Critical Rate} \mathrel{{*}{=}} 1 + 0.1\% * \text{level} + 0.01\% * [\text{level}-1000]$
+
+            <h3>VI: Eratos</h3>
+            <b>Unlock:</b> Gamma<br>
+            <b>Cost:</b> $180 * 1.06^{\text{level}}$<br>
+            <b>Reward:</b> $\text{Attack Speed} \mathrel{{*}{=}} 1 + 1\% * \log_{10}(\text{level} + 1)$
+
+            <h3>VII: Aryabhata</h3>
+            <b>Unlock:</b> Napier<br>
+            <b>Cost:</b> $210 * 1.07^{\text{level}}$<br>
+            <b>Reward:</b> $\text{Super Critical Rate} \mathrel{{+}{=}} 1\% * \log_{10}(\text{level} + 1)$
+
+            <h3>VIII: Brahmagupta</h3>
+            <b>Unlock:</b> Penta<br>
+            <b>Cost:</b> $240 * 1.1^{\text{level}}$<br>
+            <b>Reward:</b> $\text{Equation Speed} \mathrel{{*}{=}} 1 + 1\% * \text{level} + 0.1\% * [\text{level}-1000]$
+
+            <h3>IX: Khuwarizmi</h3>
+            <b>Unlock:</b> Battle upgrade 26<br>
+            <b>Cost:</b> $100 * 1.05^{\text{level}}$<br>
+            <b>Reward:</b> $\text{HP Reward} \mathrel{{*}{=}} 1 + 1\% * \text{level} + 0.1\% * [\text{level}-1000]$
+
+            <h3>X: Omar</h3>
+            <b>Unlock:</b> Battle upgrade 27<br>
+            <b>Cost:</b> $100 * 1.05^{\text{level}}$<br>
+            <b>Reward:</b> $\text{ATK Reward} \mathrel{{*}{=}} 1 + 1\% * \text{level} + 0.1\% * [\text{level}-1000]$
+
+            <h3>XI: Bhaskara</h3>
+            <b>Unlock:</b> Battle upgrade 28<br>
+            <b>Cost:</b> $100 * 1.05^{\text{level}}$<br>
+            <b>Reward:</b> $\text{DEF Reward} \mathrel{{*}{=}} 1 + 1\% * \text{level} + 0.1\% * [\text{level}-1000]$
+
+            <h3>XII: Madhava</h3>
+            <b>Unlock:</b> Battle upgrade 29<br>
+            <b>Cost:</b> $500 * 1.1^{\text{level}}$<br>
+            <b>Reward:</b> $\text{EXP Reward} \mathrel{{*}{=}} 1 + 0.05\% * \text{level} + 0.005\% * [\text{level}-1000]$
+
+            <h3 class="unavailable">XIII: Bartolomeo</h3>
+
+            <h3 class="unavailable">XIV: Cardano</h3>
+
           </div>
           <div class="explanation" id="explanation_challenges" style="display: none">
             Explanation challenges
